EPMRPP-38612. Fix fields align in invite user.

--- a/app/src/components/inputs/inputUserSearch/inputUserSearch.scss
+++ b/app/src/components/inputs/inputUserSearch/inputUserSearch.scss
@@ -19,6 +19,7 @@
       position: absolute;
       width: inherit;
       border: 1px solid $COLOR--gray-80;
+      box-sizing: border-box;
       &:hover {
         border: 1px solid $COLOR--gray-47;
       }
